Fix name input getting cut off

--- a/src/Forge.module.css
+++ b/src/Forge.module.css
@@ -73,7 +73,7 @@
   font-family: var(--system-ui);
   font-weight: normal;
   font-style: italic;
-  line-height: 1;
+  line-height: 1.5;
 }
 
 .NameInput input {
@@ -88,7 +88,8 @@
   font-weight: inherit;
   font-style: inherit;
   line-height: inherit;
-  padding: 2px 50px 2px 10px;
+  padding: 2px 50px 2px 0;
+  text-indent: 10px;
 }
 
 .NameInput::after {
